@@ -79,6 +79,12 @@
 #define DNS_EVENT_ZONELOAD			(ISC_EVENTCLASS_DNS + 49)
 #define DNS_EVENT_KEYDONE			(ISC_EVENTCLASS_DNS + 50)
 #define DNS_EVENT_SETNSEC3PARAM			(ISC_EVENTCLASS_DNS + 51)
+#define DNS_EVENT_SETSERIAL			(ISC_EVENTCLASS_DNS + 52)
+#define DNS_EVENT_CATZUPDATED			(ISC_EVENTCLASS_DNS + 53)
+#define DNS_EVENT_CATZADDZONE			(ISC_EVENTCLASS_DNS + 54)
+#define DNS_EVENT_CATZMODZONE			(ISC_EVENTCLASS_DNS + 55)
+#define DNS_EVENT_CATZDELZONE			(ISC_EVENTCLASS_DNS + 56)
+#define DNS_EVENT_RUNIN				(ISC_EVENTCLASS_DNS + 57)
 
 #define DNS_EVENT_FIRSTEVENT			(ISC_EVENTCLASS_DNS + 0)
 #define DNS_EVENT_LASTEVENT			(ISC_EVENTCLASS_DNS + 65535)
